--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav>
 
     <ul>
-      <li><a href="#"><span class="material-icons" aria-label="Home">local_cafe</span></li>
+      <li><a href="#"><span class="material-icons" aria-label="Home">local_cafe</span></a></li>
       <li><a href="#menu">Menu</a></li>
       <li><a href="#about">About Us</a></li>
     </ul>
